# Student-Picker-cpp

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: CSVReader.cpp  CSVReader.hpp  DatabaseManager.cpp  DatabaseManager.hpp  ImageProcessor.cpp  ImageProcessor.hpp  XLSXReader.cpp  XLSXReader.hpp  global.cpp  global.hpp  logger.cpp  logger.hpp  userPreference.cpp  userPreference.hpp
src/gui/: MainWindow.cpp  MainWindow.hpp  StudentTableModel.cpp  StudentTableModel.hpp
